fix: fixed an alignment issue on the why kaya section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -86,6 +86,9 @@
     @apply font-bold mb-3 transition-all duration-500 ease-in-out rounded-t-lg rounded-b-none
   }
   
+  .contact-input{
+    @apply w-full py-3 mb-4 border-0 border-b-2 rounded text-primary/80 placeholder:text-gray/90 border-gray bg-extraLightGray/10 focus:ring-0 focus:outline-none focus:border-b-2 focus:border-gray;
+  }
 }
 
 /* @media (prefers-color-scheme: dark) {
